Regular buttons alignment fixed

--- a/src/components/YourTable/ControlButton/styles.css
+++ b/src/components/YourTable/ControlButton/styles.css
@@ -5,17 +5,18 @@
 
 .controlButton-outer {
   border: 0;
-  display: flex;
-  flex-direction: column;
+
+  align-items: center;
   height: var(--buttonSize);
-  letter-spacing: 0px;
+  width: var(--buttonSize);
+
   font-family: var(--spotlightFont);
   font-weight: var(--spotlightWeight);
   font-size: calc(var(--defaultTextSize) / 1.5);
-  text-align: center;
+  letter-spacing: 0px;
   text-transform: uppercase;
-  padding: 0;
-  width: var(--buttonSize);
+  display: flex;
+  text-align: center;
 }
 
 .controlButton--inactive {
@@ -41,6 +42,7 @@
 
 .controlButton-bigNumber {
   font-size: var(--spotlightSize);
+  display: block;
 }
 
 .controlButton-spinner {
